# f5-xc-ce-terraform

./: .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  .secrets.baseline  .tflint.hcl  .yamllint  CLAUDE.md  CONTRIBUTING.md  F5_XC_CE_Infrastructure.drawio  README.md  test-p12-extraction.sh
.claude/commands/: speckit.checklist.md  speckit.implement.md  speckit.specify.md
.github/: pull_request_template.md
.github/workflows/: branch-cleanup.yml  terraform-apply.yml  terraform-destroy.yml  terraform-init.yml  terraform-plan.yml  terraform-validate.yml
.specify/memory/: constitution.md
.specify/scripts/bash/: README.md  check-prerequisites.sh  create-new-feature.sh  post-merge-cleanup.sh  setup-plan.sh  update-agent-context.sh  verify-issue-context.sh
.specify/templates/: tasks-template.md
docs/: architecture.md  development.md  manual-deployment.md  requirements.md
scripts/: cleanup-orphaned-resources.sh  setup-backend.sh  setup-dev-environment.sh  validate-deployment.sh  verify-f5xc-deployment.sh
specs/001-ce-cicd-automation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-ce-cicd-automation/checklists/: requirements.md
specs/001-ce-cicd-automation/contracts/: f5-xc-api.yaml
terraform/: backend.tf
terraform/environments/dev/: README-DIAGRAMS.md  backend.local.hcl.example  diagram.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
terraform/modules/azure-external-lb/: main.tf  outputs.tf  variables.tf
terraform/modules/azure-hub-vnet/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/azure-load-balancer/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/azure-spoke-vnet/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/f5-xc-ce-appstack/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/f5-xc-ce-k8s/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/f5-xc-registration/: README.md  main.tf  outputs.tf  variables.tf
tests/: NAMING-REFACTOR-WORKFLOW.md  validate-naming-conventions.sh
tests/integration/: module_test.go
tests/policies/: naming_convention.rego  security_groups.rego
tools/diagram-generator/: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  example-config.yaml  pyproject.toml
tools/diagram-generator/.github/workflows/: ci.yml
tools/diagram-generator/assets/: azure-icons.mxlibrary
tools/diagram-generator/scripts/: setup-dev.sh  validate-package.sh
tools/diagram-generator/src/diagram_generator/: __init__.py  azure_collector.py  azure_icons.py  azure_shape_library.py  cli.py  correlation.py  drawio_diagram.py  exceptions.py  f5xc_collector.py  lucid_auth.py  lucid_diagram.py  models.py  terraform_collector.py  utils.py
tools/diagram-generator/tests/: __init__.py  conftest.py  test_azure_collector.py  test_correlation.py  test_f5xc_collector.py  test_terraform_collector.py
